# devjunk

./: .gitignore  Cargo.toml  Makefile  README.md
.github/workflows/: release.yml
devjunk-cli/: Cargo.toml
devjunk-cli/src/: main.rs
devjunk-core/: Cargo.toml
devjunk-core/src/: cleaner.rs  error.rs  lib.rs  scanner.rs  types.rs
devjunk-gui/: index.html  package-lock.json  package.json  tsconfig.node.json  tsconfig.node.tsbuildinfo  vite.config.ts
devjunk-gui/src/: App.css  App.tsx  index.css
devjunk-gui/src-tauri/: Cargo.toml  tauri.conf.json
devjunk-gui/src-tauri/src/: commands.rs  dto.rs  main.rs
devjunk-gui/src/components/: ActionBar.tsx  PathInput.tsx  ScanTable.tsx
devjunk-gui/src/i18n/: index.ts
devjunk-gui/src/i18n/locales/: en.json  ko.json
devjunk-gui/src/store/: scanStore.ts
devjunk-gui/src/types/: index.ts
